--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,31 +1,30 @@
 .Navbar {
     background-color: #000000;
-    /* position: relative; */
-    /* margin-top: 100px; */
     margin-top: 40px;
     height: 50px;
     z-index: 1;
-    
+    justify-content: flex-end;
   }
 
-.NavBar-link, .NavBar-link:hover {
+.NavBarlink, .NavBarlink:hover {
   text-decoration: none;
+  text-align: right;
   color: white;
   margin-right: 20px;
 }
 
-.image-div {
+.imagediv {
   position: absolute;
   width: 300px;
   height: 300px;
   left: 72px;
   top: 1px;
-  filter: drop-shadow(0px 14px 24px rgba(0, 0, 0, 0.05));
+  filter: drop-shadow(0px 14px 24px rgba(0, 0, 0, 0.1));
   z-index: 2;
 
 }
 
-.text-container {
+.textcontainer {
   float: right;
   text-align: right;
   /* margin-bottom: 50px; */
@@ -33,10 +32,12 @@
   /* padding-top: 100px */
 }
 
-.quote-section {
+.quotesection {
+  /* position: fixed; */
   display: flex;
   flex-flow: column;
-  margin-top: 60px;
+  margin-top: 100px;
+  z-index: 2;
 }
 
 .text {
@@ -50,6 +51,8 @@ button {
   margin-right: 25px;
   background-color: #B10006;
   color: white;
+  padding: 15px;
+  font-size: 18px;
   /* width: 150px; */
   /* height: 150px; */
   border: #B10006;
