--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 body {
+  min-height: 100vh;
   margin: 0;
-  font-family:  'Roboto', 'Oxygen',
+  /* overflow: scroll; */
+  font-family:   'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
