--- a/src/components/WhatWeDo/WhatWeDo.module.css
+++ b/src/components/WhatWeDo/WhatWeDo.module.css
@@ -7,6 +7,7 @@ h3 {
     margin-top: 10px;
     display:inline-block;
     font-weight: bold;
+    color: black;
     /* text-decoration-line: underline; */
     border-bottom:5px solid #B10006;
     padding-bottom:1px;
@@ -38,7 +39,7 @@ h6{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height: 300px;
+    /* height: 300px; */
     border: 0.1px solid white;
     border-radius: 7px;
     width: 17vw;
@@ -75,6 +76,8 @@ h6{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    border: 0.1px solid white;
+    border-radius: 7px;
     width: 17vw;
     color: white;
 }
@@ -106,10 +109,15 @@ h6{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    border: 0.1px solid white;
+    border-radius: 7px;
     width: 17vw;
     color: white;
 }
 .airquality h5{
+     margin-left: -1px;
+    margin-right: -10px;
+    margin-top: -2px;
     background-color: #B10006;
     border: 2px solid #B10006;
     border-radius: 0px 10px 10px 0px;
