--- a/src/components/OurService/OurService.module.css
+++ b/src/components/OurService/OurService.module.css
@@ -51,7 +51,8 @@
 }
 
 .button {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top:50px;
 }
 
