move global css into app.css add component into app.js change the name for the file "our service" to "types of jobs we do"

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,31 @@ body{
   color: #61dafb;
 }
 
+h3 {
+  margin-top: 20px;
+  display:inline-block;
+  font-weight: bold;
+  /* text-decoration-line: underline; */
+  border-bottom:5px solid #B10006;
+  padding-bottom:1px;
+
+}
+
+h4 {
+  font-weight: bold;
+}
+
+h6{
+  padding: 5px;
+  font-family: 'Lato';
+  /* font-size: 16px; */
+  margin-top: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
