--- a/src/components/WhatWeDo/WhatWeDo.module.css
+++ b/src/components/WhatWeDo/WhatWeDo.module.css
@@ -1,6 +1,13 @@
-/* .container{
-     background-color: rgb(177, 176, 176);
-} */
+.container{
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.titletext{
+    margin-top: 50px;
+}
 
 .graphics {
     display: flex;
