--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,7 +1,7 @@
 .Navbar {
     background-color: #000000;
     margin-top: 40px;
-    height: 50px;
+    height: 80px;
     z-index: 1;
     justify-content: flex-end;
   }
@@ -57,4 +57,8 @@ button {
   /* height: 150px; */
   border: #B10006;
   border-radius: 25px;
+}
+
+.strong {
+  font-weight: 700;
 }
