--- a/src/components/WhatWeDo/WhatWeDo.module.css
+++ b/src/components/WhatWeDo/WhatWeDo.module.css
@@ -1,24 +1,58 @@
-/* .container{
-     background-color: rgb(177, 176, 176);
-} */
+.container{
+     padding-top: 50px;
+     padding-left: 100px;
+     padding-right: 100px;
+     padding-bottom: 100px;
+}
 
 .graphics {
     display: flex;
     flex-flow: row;
     margin: 25px;
+    padding-top: 25px;
     /* padding: 25px; */
     text-align: center;
     justify-content: center;
 }
 
+.titleText{
+    padding-top: 50px;
+    /* padding-left: 150px; */
+    margin-left: 60px;
+    margin-right: 70px;
+    /* padding-right: 150px; */
+}
+
+.graphicHeader{
+    margin-left: -1px;
+    margin-right: -10px;
+    margin-top: -2px;
+    background-color: #B10006;
+    border: 2px solid #B10006;
+    border-radius: 0px 10px 10px 0px;
+    font-weight: 700;
+}
+
+.listItem{
+    background-color: rgb(121, 121, 121);
+    text-align: left;
+    text-indent: 25px;
+    border-radius: 10px 0px 0px 10px;
+    font-size: 16px;
+    margin-right: -1px;
+    padding: 5px;
+    font-family: 'Lato', sans-serif;
+    margin-top: 30px;
+}
+
 .heating{
     margin: 25px;
     filter: drop-shadow(0px 14px 24px rgba(0, 0, 0, 0.5));
-    background: url("./kisspng-fire-flame-computer-icons-combustibility-and-flamm-campfire-5abbdd730703e1.2626166915222613630287.png");
+    /* background: url("./kisspng-fire-flame-computer-icons-combustibility-and-flamm-campfire-5abbdd730703e1.2626166915222613630287.png"); */
     background-color: white;
     /* display: inline-block; */
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
     /* height: 300px; */
     border: 0.1px solid white;
@@ -27,96 +61,52 @@
     color: white;
 }
 
-.heating h5{
-    margin-left: -1px;
-    margin-right: -10px;
-    margin-top: -2px;
-    background-color: #B10006;
-    border: 2px solid #B10006;
-    border-radius: 0px 10px 10px 0px;
-}
 
-.heating ul li {
-    background-color: black;
-    text-align: left;
-    text-indent: 25px;
-    border-radius: 10px 0px 0px 10px;
-    font-size: 16px;
-    margin-right: -1px;
-    padding: 5px;
-    font-family: 'Lato', sans-serif;
-    margin-top: 30px;
-}
 
 .cooling{
     margin: 25px;
     filter: drop-shadow(0px 14px 24px rgba(0, 0, 0, 0.5));
-    background: url("./NicePng_vans-logo-png_9621723.png");
+    /* background: url("./NicePng_vans-logo-png_9621723.png"); */
     background-color: white;
     /* display: inline-block; */
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
     border: 0.1px solid white;
     border-radius: 7px;
     width: 17vw;
     color: white;
 }
-.cooling ul li {
-    background-color: black;
-    text-align: left;
-    text-indent: 25px;
-    border-radius: 10px 0px 0px 10px;
-    font-size: 16px;
-    margin-right: -1px;
-    padding: 5px;
-    font-family: 'Lato', sans-serif;
-    margin-top: 30px;
-}
-.cooling h5{
-    margin-left: -1px;
-    margin-right: -10px;
-    margin-top: -2px;
-    background-color: #B10006;
-    border: 2px solid #B10006;
-    border-radius: 0px 10px 10px 0px;
-}
+
 .airquality{
     margin: 25px;
     filter: drop-shadow(0px 14px 24px rgba(0, 0, 0, 0.5));
-    background: url("./wind-svgrepo-com.png");
+    /* background: url("./wind-svgrepo-com.png"); */
     background-color: white;
     /* display:  */
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
     border: 0.1px solid white;
     border-radius: 7px;
     width: 17vw;
     color: white;
 }
-.airquality h5{
-     margin-left: -1px;
-    margin-right: -10px;
-    margin-top: -2px;
-    background-color: #B10006;
-    border: 2px solid #B10006;
-    border-radius: 0px 10px 10px 0px;
-}
 
-.airquality ul li {
-    background-color: black;
-    text-align: left;
-    text-indent: 25px;
-    border-radius: 10px 0px 0px 10px;
-    font-size: 16px;
-    margin-right: -1px;
-    padding: 5px;
-    font-family: 'Lato', sans-serif;
-    margin-top: 30px;
-}
 
-ul {
+
+/* ul {
     list-style-type: none;
-}
+} */
 
+.dot {
+    color: #B10006;
+    padding: 40px;
+  }
+
+.footText{
+    padding-top: 50px;
+    font-weight: 400;
+    margin-left: -120px;
+
+}
